# rust-cscp-controller

./: Cargo.toml  index.html
common/: Cargo.toml
common/src/: lib.rs
src/: app.rs  external.rs  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: client.rs
src-tauri/src/: main.rs
src-tauri/src/cscp/: client.rs  commands.rs  connection.rs  frame.rs  mod.rs  requests.rs
src/components/: mod.rs
src/components/faders/: fader.rs  faders.rs  mod.rs
src/components/info/: info.rs
src/components/state/: mod.rs  stateManager.rs
src/includes/: commands.rs  events.rs
